--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <title>Matt Argomaniz</title>
   </head>
   <body>
-    <noscript>I'm sorry, uou need to enable JavaScript to run this app.</noscript>
+    <noscript>I'm sorry, you need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
